--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,9 @@ body, header, nav, main, footer, h1, div, img, a, ul, figure, figcaption, articl
 
 
 }
+body {
+    background-color: #000;
+  }
 table, th, td{
     border: 0.1em solid #000;
     text-align: center;
@@ -57,11 +60,13 @@ figcaption{
     margin: 2% auto;
 }
 header{
+    
+    width: 100%;
     font-family: 'Pacifico', cursive;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
-    background-color: #000;
+    /*background-color: #000;*/
 	height: 190px;
     color: #fff;
     text-shadow: 9px 9px 9px #ccc;
@@ -87,8 +92,38 @@ img{
     margin-left: auto;
 }
 
+.mobile.nav a{
+    color: #000;
+    text-align: center;
+    font-size: 2em;
+    text-decoration: none;
+    padding: 3%;
+    display: block;
+}
+#menu-links{
+    display: none;
+}
+
+.mobile-nav a.menu-icon {
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+.mobile-nav nav li a {
+    display: block;
+    color: #fff;
+    padding: 0.5em 1em;
+    text-decoration: none;
+
+}
+/*nav{
+    
+    margin: 5em 3em 0 0;
+    width: 70%;
+}*/
 nav{
-  
+
     color: #000;
     padding: 1%;
     margin-bottom: 1%;
@@ -112,6 +147,66 @@ nav li a:hover {
     background-color: #000;
     transform: scale(1.3);
 }
+.mobilenav{
+    overflow: hidden;
+    background-color: #333;
+    position: relative;
+
+}
+.mobilenav #menu-links{
+    display: none;
+
+}
+.mobilenav a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+}
+.mobilenav a:hover{
+    background-color: #ddd;
+    color: black;
+    
+}
+
+
+
+.mobile{
+    display: block;
+}
+.tablet-desktop, #menu-links {
+    display: none;
+
+}
+
+
+nav{
+  
+    color: #000;
+    padding: 1%;
+    margin-bottom: 1%;
+    list-style-type: none;
+}
+nav ul{
+    list-style-type: none;
+    text-align: center;
+}
+nav li{
+    font-size: 1.5em;
+    
+    text-align: center;
+}
+nav li a {
+    padding: 0.5em 1em;
+}
+
+nav li a:hover {
+    color: #fff;
+    background-color: #000;
+    transform: scale(1.3);
+}
+
 /*form styling start*/
 form{
     width: 50%;
@@ -134,53 +229,26 @@ a{
     font-weight: bold;
 }
 */
-.mobile{
-    display: block;
 
-}
 .lists{
     font-family: 'Pacifico', cursive;
     text-align: center;
 
 }
-.hamburger {
-	position: relative
-	display: block;
-	width: 35px;
-	height: 35px;
-	cursor: pointer;
 
-	appearance: none;
-	background: none;
-	outline: none;
-	border: none;
-}
-
-.hamburger .bar, .hamburger:after, .hamburger:before {
-	content: ' ';
-	display: block;
-	width: 100%;
-	height: 5px;
-	background-color: #fff;
-	margin: 6tpx 0px;
-	transition: 0.4s;
-}
-
-.hamburger.is-active, .hamburger:after {
-	transform: rotate(-45deg) translate(-9px, 6px);
-}
 
 /*mobile media query start*/
 @media screen and (max-width: 630px), print{
-    /*.tablet-desktop{
+   /* .tablet-desktop{
         display: block;
     }
-    .mobile{
+    .mobile, .mobilenav {
         display: none;
     }*/
 
-
-    /*start of table styling for mobile viewport*/
+    header {
+        padding-bottom: 2%;
+    }
     table, th, td{
         border: 0.1em solid #000;
         text-align: center;
@@ -191,14 +259,48 @@ a{
         margin: 0 auto;
     
     }
+    .mobilenav{
+        overflow: hidden;
+        background-color: #333;
+        position: relative;
+        
+    
+    }
+    .mobilenav #menu-links{
+        display: none;
+    
+    }
+    .mobilenav a {
+        color: white;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+        display: block;
+    }
+    .mobilenav a:hover{
+        background-color: #ddd;
+        color: black;
+        
+    }
+    .active{
+        background-color: #000;
+        color: white;
+    }
 
 }
+
 /*end of mobile media query*/
 
 
 /*desktop media query start*/
 @media screen and (min-width: 760px) {
     /*style rules for nav*/
+    .tablet-desktop{
+        display: block;
+    }
+    .mobile, .mobilenav {
+        display: none;
+    }
     nav ul a:hover{
         color: #000;
         background-color: #fff;
@@ -218,6 +320,12 @@ a{
 
 /* start of tablet media querry*/
 @media screen and (min-width: 760px) and (max-width: 1023px) {
+    .tablet-desktop{
+        display: block;
+    }
+    .mobile, .mobilenav {
+        display: none;
+    }
 
     table, th, td{
         border: 0.1em solid #000;
