--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,33 @@ body, header, nav, main, footer, h1, div, img, a, ul, figure, figcaption, articl
 main{
 	text-align: center;
 }
-.color{
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 30px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+  }
+  
+  /* Add a hover effect if you want */
+  .fa:hover {
+    opacity: 0.7;
+  }
+  
+  /* Set a specific color for each brand */
+  
+  /* instagram */
+  .fa-instagram {
+    background: #3B5998;
+    color: white;
+  }
+  
+  /* Twitter */
+  .fa-twitter {
+    background: #55ACEE;
+    color: white;
+  }.color{
     color: #ccc;
 
 }
